# imagination-code

./: ChangeLog  FAQ  Makefile  Makefile.am  Makefile.in  README  TODO  config.h  config.status  configure  configure.in  imagination.1  imagination.desktop.in.in  imagination.glade  imagination.gladep
autom4te.cache/: output.1  requests  traces.0  traces.1
branches/alt_layout/po/: de.po  en_GB.po  it.po  pt_BR.po  ru.po
branches/alt_layout/sample_ss/: imagination_2_features.imag
branches/alt_layout/src/: Makefile.am  callbacks.h  imagination.c  main-window.c  support.h
branches/audio_colors/doc/en/: imagination.xml.in
branches/audio_colors/po/: fr.po  it.po  pt_BR.po  sl_SI.po  sv.po
branches/audio_colors/src/: audio.c  audio.h  callbacks.c  export.c  imagination.c  imagination.h  img_sox.c  img_sox.h  main-window.c  slideshow_project.c
branches/cairo_surface/: ChangeLog  TODO.merge  configure.in  imagination.1
branches/cairo_surface/doc/en/: imagination.xml.in
branches/cairo_surface/doc/en/images/: Makefile.am
branches/cairo_surface/po/: cs.po  de.po  en_GB.po  es.po  fr.po  imagination.pot  it.po  pt_BR.po  ru.po  sl_SI.po  sv.po
branches/cairo_surface/sample_ss/: imagination_2_features.imag
branches/cairo_surface/src/: Makefile.am  audio.c  audio.h  callbacks.c  callbacks.h  export.c  export.h  imagination.c  imagination.h  imgcellrendererpixbuf.c  imgtablebutton.c  imgtablebutton.h  main-window.c  main-window.h  new_slideshow.c  slideshow_project.c  subtitles.c  subtitles.h  support.c  support.h
branches/cairo_surface/transitions/: Makefile.am  barn_door_wipe.c  dissolve.c  ellipse_wipe.c  fade.c  push_wipe.c
branches/ken_editor/: TODO.ken_editor
branches/ken_editor/src/: Makefile.am  callbacks.c  callbacks.h  export.c  imagination.h  main-window.c  main-window.h  new_slideshow.c  sexy-icon-entry.h  slide.c  slide.h  slideshow_project.c  support.c  support.h
branches/ken_editor/transitions/: misc.c
branches/overview_mode/: ChangeLog  TODO.merge
branches/overview_mode/src/: callbacks.c  imagination.c  imagination.h  imgcellrendererpixbuf.h  main-window.c  main-window.h  new_slideshow.c  slideshow_project.c  subtitles.c  support.c
branches/overview_mode/transitions/: Makefile.am  clock_wipe.c  insert.c  misc_shape_wipe.c
branches/tb_sandbox/src/: imagination.h  main-window.c  main-window.h
pixmaps/: Makefile.am
plugins/: Makefile.am  demoplugin.c  pluginmacros.h
po/: ChangeLog  LINGUAS  Makefile  Makefile.in  POTFILES.in  cs.po  de.po  en_GB.po  es.po  fr.po  imagination.pot  it.po  pt_BR.po  ru.po  sl_SI.po  sv.po
src/: Makefile  Makefile.am  Makefile.in  audio.c  audio.h  callbacks.c  callbacks.h  eog-pixbuf-cell-renderer.c  export.c  fantasy  imagination.c  imagination.h  interface.c  interface.c.bak  main-window.c  main-window.h  new_slideshow.c  new_slideshow.h  slideshow_project.c  slideshow_project.h  support.c  support.h  transition_data.h
src/.deps/: callbacks.Po  interface.Po  main.Po
tags/2.1/: configure.in
tags/2.1/po/: POTFILES.in
tags/2.1/src/: Makefile.am  support.c
tags/2.1/transitions/: Makefile.am
tags/imagination-1.0/: imagination.desktop.in.in
tags/imagination-1.0/po/: LINGUAS  POTFILES.in  en_GB.po  it.po  sl_SI.po
tags/imagination-1.0/src/: Makefile.am  callbacks.c  eog-pixbuf-cell-renderer.c  imagination.h  new_slideshow.c  slideshow_project.c  support.h
tags/imagination-1.0/transitions/: blind_bottom_right.c  blind_down.c  blind_right.c  circular_blind_to_center.c  move_to_bottom.c  push_from_bottom.c  roller_blind.c  wave_left_up.c  wave_up.c
transitions/: Makefile.am  bar_wipe.c  barn_door_wipe.c  blind_bottom_left.c  blind_bottom_right.c  blind_down.c  blind_left.c  blind_right.c  blind_top_left.c  blind_top_right.c  blind_up.c  bow_tie_wipe.c  box_wipe.c  circle.c  circular_blind_from_center.c  circular_blind_to_center.c  clock_wipe.c  cross_fade.c  diagonal_wipe.c  ellipse_wipe.c  fade.c  four_box_wipe.c  macros.h  misc_diagonal_wipe.c  misc_shape_wipe.c  move_from_bottom.c  move_to_bottom.c  push_from_left.c  push_from_right.c  push_to_bottom.c  push_wipe.c  wave.c  wave_down.c  wave_left.c  wave_left_down.c  wave_right.c  wave_right_down.c  wave_right_up.c
