dnl Process this file with autoconf to produce a configure script.

AC_INIT(configure.in)
AM_INIT_AUTOMAKE(imagination, 1.0)
AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC

AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_INTLTOOL

# for plugins
AC_DISABLE_STATIC
AM_PROG_LIBTOOL
LIBTOOL="$LIBTOOL --silent"

#check for ffmpeg
AC_CHECK_PROG([have_ffmpeg], [ffmpeg], [yes], [no])
if test "x$have_ffmpeg" = "xno"; then
	AC_MSG_ERROR([Can't find ffmpeg executable. Please install ffmpeg package.])
fi

pkg_modules="gtk+-2.0 >= 2.12.0"
PKG_CHECK_MODULES(PACKAGE, [$pkg_modules])

DEVELOPMENT_CFLAGS+=" -Wall"

AC_SUBST(PACKAGE_CFLAGS)
AC_SUBST(PACKAGE_LIBS)

GETTEXT_PACKAGE=imagination
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [Gettext package.])

dnl Add the languages which your application supports here.
ALL_LINGUAS="`sed -e '/^#/d' $srcdir/po/LINGUAS`"
AM_GLIB_GNU_GETTEXT

AC_SUBST(DEVELOPMENT_CFLAGS)

GTK_VERSION=`$PKG_CONFIG --modversion gtk+-2.0`

AC_OUTPUT([
Makefile
src/Makefile
transitions/Makefile
po/Makefile.in
icons/Makefile
icons/16x16/Makefile
icons/24x24/Makefile
icons/48x48/Makefile
icons/scalable/Makefile
imagination.desktop.in
])

echo "

Imagination configuration:
------------------------

	Install in  :       ${prefix}/bin
	GTK version :       ${GTK_VERSION}

"
